--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,92 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Raleway", sans-serif;
+  scroll-behavior: smooth;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.goBack {
+  margin: 10px;
+  position: fixed;
+  top: 0;
 }
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+  font-size: 3.5rem;
+  letter-spacing: 10px;
+}
+h2 {
+  font-size: 2.75rem;
+  letter-spacing: 10px;
+}
+
+p {
+  font-size: 1.3rem;
+  line-height: 28px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  margin: 5px;
+}
+
+.email {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 1.35rem;
+  color: blue;
+}
+
+section {
+  width: 100%;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.content {
+  width: 100%;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: justify;
+  hyphens: auto;
+}
+
+.audioPlayer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
+  border: 0;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  opacity: 0.9;
+}
+.videoPlayer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  border-radius: 10px;
+  opacity: 0.9;
 }
